After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 726717 - Nesting GtkExpander gives Gdk-CRITICAL error
Nesting GtkExpander gives Gdk-CRITICAL error
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: Other
3.10.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2014-03-19 15:05 UTC by Sarah
Modified: 2014-03-20 13:21 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Example of the (1.06 KB, text/plain)
2014-03-19 15:05 UTC, Sarah
Details

Description Sarah 2014-03-19 15:05:06 UTC
Created attachment 272394 [details]
Example of the 

Trying to nest GtkExpanders causes the following error:

(gtk:XXXXX): Gdk-CRITICAL **: gdk_window_get_scale_factor: assertion 'GDK_IS_WINDOW (window)' failed

(xxxxx's are the process number afaik, could be wrong, changes everytime heh)

Attached is the example C source file. Was compiled with the following line:

gcc -Wall -g expander.c -o gtk `pkg-config --cflags gtk+-3.0` `pkg-config --libs gtk+-3.0`

This bug started occuring since 3.10, was not present in 3.8.6 or 3.8.7 from what I have been able to test. It did appear for me in 3.10.7

Error appears when expanding the first expander for me. Expected result should be not to generate the error.

Hope it helps